
dmapi-0.1.0 (15 January 2001)
	- initial version of package
	- early alpha code
