@@ -1,4 +1,7 @@
 
+dmapi-0.1.1 (30 January 2001)
+        - minor rpm and deb packaging work
+
 dmapi-0.1.0 (15 January 2001)
 	- initial version of package
 	- early alpha code
